--- a/react-bakery-website/src/index.css
+++ b/react-bakery-website/src/index.css
@@ -21,6 +21,26 @@
     }
   }
 
+body{
+  background-image: url('/background-img.jpeg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+/* .container-bg{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 80%;
+  height: 100%;
+  background-color: rgba(128, 128, 128, 0.5); 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+} */
 
 
   .hero-section {
@@ -79,4 +99,48 @@
       transform: translateY(10px);
     }
   } */
-  
+
+/* Home Page Menu Section */
+.container{
+  background-color: rgba(128, 128, 128, 0.6);
+}
+
+.icon-circle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px; /* Adjust the size as needed */
+  height: 50px; /* Adjust the size as needed */
+  border-radius: 50%;
+  padding: 10px; 
+  background-color: rgba(117, 116, 116, 0.8);
+  color: rgb(194, 194, 194);
+}
+
+.icon-circle:hover {
+  color: #C3B1E1;
+}
+
+/* Home Page About Section */
+.about-section {
+  display: flex;
+  justify-content: center; /* Center the flex items horizontally */
+  align-items: center;
+  width: 80%;
+}
+
+.image-container,
+.text-container {
+  flex: 1;
+}
+
+.text-container {
+  padding-left: 2rem;
+  /* text-align: center; */
+  margin-left: 10rem;
+}
+
+.about-image {
+  width: 100%; /* Set the image width to fill the container */
+  height: auto;
+}
